# taiyo

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  context7.json  docker-compose.yml  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: docs.yml  integration-tests.yml  publish.yml  sync-docs.yml  unit-tests.yaml
docs/: auth.md  clients.md  getting-started.md  index.md  mixins-and-configs.md  models.md  query-parsers.md  recipes.md
docs/api-reference/: clients.md  index.md  params.md  parsers.md  schemas.md
docs/clients/: auth.md  models.md
docs/controlling-results/: faceting.md  grouping.md  highlighting.md
docs/indexing/: examples.md  overview.md  schema.md
docs/parsers/: dense.md  overview.md  query-parsers.md  sparse.md  spatial.md  terms.md
scripts/: format_docs.py
taiyo/: __init__.py  auth.py  client.py  types.py
taiyo/client/: __init__.py  auth.py  base.py  client.py
taiyo/params/: __init__.py
taiyo/params/configs/: __init__.py  base.py  facet.py  group.py  highlight.py  more_like_this.py
taiyo/params/mixins/: __init__.py  base.py  common.py  dense_vector_search.py  spatial_search.py
taiyo/parsers/: __init__.py  base.py
taiyo/parsers/dense/: __init__.py  base.py  knn.py  knn_text_to_vector.py  vector_similarity.py
taiyo/parsers/sparse/: __init__.py  base.py  dismax.py  edismax.py  lucene.py
taiyo/parsers/spatial/: __init__.py  base.py  bbox.py  geofilt.py
taiyo/parsers/terms/: __init__.py  terms.py
taiyo/schema/: __init__.py  copy_field.py  enums.py  field.py  field_type.py  schema.py
tests/integration/: test_auth.py  test_dismax.py  test_faceting.py  test_grouping.py  test_knn.py  test_latlon.py  test_more_like_this.py  test_schema.py  test_solr_client.py  test_sparse.py  test_terms.py  utils.py
tests/unit/: conftest.py  mocks.py  test_auth.py  test_client.py
tests/unit/parsers/: test_configs.py  test_dense.py  test_sparse.py  test_spatial.py  test_terms.py
tests/unit/schema/: __init__.py  test_copy_field.py  test_field.py  test_field_enums.py  test_field_type.py  test_schema.py
