[project]
name = "taiyo"
version = "0.1.0"
description = "A modern async Python client for Apache Solr built with httpx and Pydantic."
authors = [
    {name = "KengoA", email = "kengo@hey.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["solr", "apache solr"]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]
requires-python = ">=3.11"

[project.urls]
homepage = "https://github.com/KengoA/taiyo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270"
]