[project]
name = "taiyo"
version = "0.1.0"
description = "Modern Python client for Apache Solr built with httpx and Pydantic."
authors = [
    {name = "KengoA", email = "kengo@hey.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["solr"]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]
requires-python = ">=3.11"

[project.urls]
homepage = "https://github.com/KengoA/taiyo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]