[project]
name = "taiyo"
version = "0.1.5"
description = "Modern Python client for Apache Solr with type safety and async support, built with httpx and Pydantic"
authors = [
    {name = "KengoA", email = "kengo@hey.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
keywords = ["solr"]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.5.0",
]
requires-python = ">=3.11"

[project.urls]
homepage = "https://github.com/taiyoproj/taiyo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["taiyo"]

[tool.hatch.build.targets.sdist]
include = [
    "/taiyo",
    "/LICENSE",
    "/pyproject.toml",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"

[tool.uv.sources]
taiyo = { workspace = true, editable = true }

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = false
warn_required_dynamic_aliases = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.0.270",
    "zensical>=0.0.9"
]
